// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer Repository Modal - packages section creates snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="modal-backdrop activeBackdrop"
      data-testid="modalBackdrop"
    />
    <div
      class="modal modal active d-block"
      role="dialog"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
      >
        <div
          class="modal-content content modal"
        >
          <div
            class="modal-header d-flex flex-row align-items-center header undefined"
          >
            <div
              class="h3 m-2 title"
            >
              Transfer repository
            </div>
            <button
              class="close"
              data-testid="closeModalBtn"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body p-4 h-100 d-flex flex-column"
          >
            <div
              class="w-100"
            >
              <form
                autocomplete="on"
                class="w-100 needs-validation"
                data-testid="transferRepoForm"
                novalidate=""
              >
                <div
                  class="form-check mb-3"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    data-testid="radio_user"
                    id="user"
                    name="transfer"
                    required=""
                    type="radio"
                    value="user"
                  />
                  <label
                    class="form-check-label font-weight-bold label"
                    for="user"
                  >
                    Transfer to my user
                  </label>
                </div>
                <div
                  class="form-check mb-3"
                >
                  <input
                    class="form-check-input"
                    data-testid="radio_org"
                    id="org"
                    name="transfer"
                    required=""
                    type="radio"
                    value="org"
                  />
                  <label
                    class="form-check-label font-weight-bold label"
                    for="org"
                  >
                    Transfer to organization
                  </label>
                </div>
                <div
                  class="d-flex flex-row align-items-center position-relative mb-3 invisible"
                  data-testid="selectOrgsWrapper"
                >
                  <div
                    class="form-group w-75 mb-2"
                  >
                    <select
                      aria-label="org-select"
                      class="custom-select"
                      data-testid="select_orgs"
                    />
                    <div
                      class="invalid-feedback fieldFeedback"
                    >
                      This field is required
                    </div>
                  </div>
                  <div
                    class="d-inline ml-3"
                  >
                    <span
                      class="spinner-border spinner-border-sm text-primary"
                    />
                  </div>
                </div>
                <small
                  class="text-muted text-break mt-3"
                >
                  <p>
                    It may take a few minutes for this change to be visible across the Hub.
                  </p>
                </small>
              </form>
            </div>
            <div
              class="alertWrapper"
              data-testid="alertWrapper"
            />
          </div>
          <div
            class="modal-footer p-3"
          >
            <button
              class="btn btn-secondary"
              data-testid="transferRepoBtn"
              type="button"
            >
              Transfer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Transfer Repository Modal - packages section creates snapshot 2`] = `
<DocumentFragment>
  <div>
    <div
      class="modal-backdrop activeBackdrop"
      data-testid="modalBackdrop"
    />
    <div
      class="modal modal active d-block"
      role="dialog"
    >
      <div
        class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
      >
        <div
          class="modal-content content modal"
        >
          <div
            class="modal-header d-flex flex-row align-items-center header undefined"
          >
            <div
              class="h3 m-2 title"
            >
              Transfer repository
            </div>
            <button
              class="close"
              data-testid="closeModalBtn"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body p-4 h-100 d-flex flex-column"
          >
            <div
              class="w-100"
            >
              <form
                autocomplete="on"
                class="w-100 needs-validation"
                data-testid="transferRepoForm"
                novalidate=""
              >
                <div
                  class="form-check mb-3"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    data-testid="radio_user"
                    id="user"
                    name="transfer"
                    required=""
                    type="radio"
                    value="user"
                  />
                  <label
                    class="form-check-label font-weight-bold label"
                    for="user"
                  >
                    Transfer to my user
                  </label>
                </div>
                <div
                  class="form-check mb-3"
                >
                  <input
                    class="form-check-input"
                    data-testid="radio_org"
                    id="org"
                    name="transfer"
                    required=""
                    type="radio"
                    value="org"
                  />
                  <label
                    class="form-check-label font-weight-bold label"
                    for="org"
                  >
                    Transfer to organization
                  </label>
                </div>
                <div
                  class="d-flex flex-row align-items-center position-relative mb-3 invisible"
                  data-testid="selectOrgsWrapper"
                >
                  <div
                    class="form-group w-75 mb-2"
                  >
                    <select
                      aria-label="org-select"
                      class="custom-select"
                      data-testid="select_orgs"
                    >
                      <option
                        value=""
                      >
                        Select organization
                      </option>
                      <option
                        value="test"
                      >
                        test
                      </option>
                      <option
                        value="helm"
                      >
                        helm
                      </option>
                    </select>
                    <div
                      class="invalid-feedback fieldFeedback"
                    >
                      This field is required
                    </div>
                  </div>
                </div>
                <small
                  class="text-muted text-break mt-3"
                >
                  <p>
                    It may take a few minutes for this change to be visible across the Hub.
                  </p>
                </small>
              </form>
            </div>
            <div
              class="alertWrapper"
              data-testid="alertWrapper"
            />
          </div>
          <div
            class="modal-footer p-3"
          >
            <button
              class="btn btn-secondary"
              data-testid="transferRepoBtn"
              type="button"
            >
              Transfer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
